# Homework_2.8

./: .gitignore  README.md  config.ini  consumer.py  finder.py  main.py  models.py  pyproject.toml  seeds.py
Part_01/: finder.py  models.py  seeds.py
Part_02/: consumer_email.py  consumer_sms.py  models.py  producer.py  seeds.py
