[tool.poetry]
name = "homework-2-8"
version = "0.1.0"
description = "NoSQL DB"
authors = ["Serhii Pidkopai <spodkopay@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_2"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.26.0"
redis = "^4.4.2"
pika = "^1.3.1"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
certifi = "^2022.12.7"
redis-lru = "^0.1.2"
faker = "^16.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
